src/css/timeline.module.css
.timeline ul li {
    list-style-type: none;
    position: relative;
    width: 6px;
    margin: 0 auto;
    padding-top: 50px;
    background: var(--contrast, #fff);
}

.timeline ul li::after {
    content: '';
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translateX(-50%);
    width: 30px;
    height: 30px;
    border-radius: 50%;
    background: inherit;
    z-index: 1;
}

.timeline ul:first-child::before {
    content: '';
    position: absolute;
    left: 50%;
    transform: translateX(-30%);
    width: 0;
    height: 0;
    border-left: 50px solid transparent;
    border-right: 50px solid transparent;
    border-top: 50px solid var(--contrast, #fff);
    background: transparent;
    z-index: 1;
}

.timeline ul li div {
    position: relative;
    bottom: 0;
    width: 420px;
    padding: 15px;
    background: var(--primary, #f45b69);
}

.timeline ul li div::before {
    content: '';
    position: absolute;
    bottom: 7px;
    width: 0;
    height: 0;
    border-style: solid;
}

.timeline ul li:nth-child(odd) div {
    left: 45px;
}

.timeline ul li:nth-child(odd) div::before {
    left: -15px;
    border-width: 8px 16px 8px 0;
    border-color: transparent var(--primary, #f45b69) transparent transparent;
}

.timeline ul li:nth-child(even) div {
    left: -455px;
}

.timeline ul li:nth-child(even) div::before {
    right: -15px;
    border-width: 8px 0 8px 16px;
    border-color: transparent transparent transparent var(--primary, #f45b69);
}

@media screen and (max-width: 600px) {
    .timeline ul li {
        margin-left: 20px;
    }

    .timeline ul li div {
        width: calc(100vw - 91px);
    }

    .timeline ul li:nth-child(even) div {
        left: 45px;
    }

    .timeline ul li:nth-child(even) div::before {
        left: -15px;
        border-width: 8px 16px 8px 0;
        border-color: transparent var(--primary, #f45b69) transparent
            transparent;
    }

    .timeline ul:first-child::before {
        left: 43px;
    }
}

